src/recipe/snapshots/rattler_build__recipe__parser__tests__context_not_mapping.snap
---
source: src/recipe/parser.rs
expression: err
---
  × Failed to parse recipe

Error: 
  × an unspecified error occurred.
   ╭─[7:9]
 6 │           version: 0.1.0
 7 │         
   ╰────
  help: Parser error: unexpected type
