src/recipe/snapshots/rattler_build__recipe__parser__tests__context_value_not_scalar.snap
---
source: src/recipe/parser.rs
expression: err
---
  × Failed to parse recipe

Error: 
  × an unspecified error occurred.
    ╭─[10:9]
  9 │             version: 0.1.0
 10 │         
    ╰────
  help: Parser error: unexpected type
