src/recipe/snapshots/rattler_build__recipe__parser__tests__context_value_not_uniform_list.snap
---
source: src/recipe/parser.rs
expression: err
---
  × Failed to parse recipe

Error: 
  × an unspecified error occurred.
    ╭─[13:9]
 12 │             version: 0.1.0
 13 │         
    ╰────
  help: Parser error: unexpected type
