src/recipe/snapshots/rattler_build__recipe__parser__tests__duplicate_keys_error.snap
---
source: src/recipe/parser.rs
expression: err
---
  × Failed to parse recipe

Error: 
  × an unspecified error occurred.
    ╭────
 22 │     - some-maintainer
    ╰────
  help: Parser error: missing field
