src/recipe/snapshots/rattler_build__recipe__parser__tests__jinja_error.snap
---
source: src/recipe/parser.rs
assertion_line: 295
expression: err
---
  × Failed to parse recipe

Error:   × Parsing: failed to render Jinja expression: unknown function
   ╭─[6:1]
 6 │   host:
 7 │     - ${{ zcompiler('c') }}
   ·       ──────────┬──────────
   ·                 ╰── unknown function: zcompiler is unknown
   ╰────

